@@ -1,3 +1,12 @@
+Wed May 28 00:38:09 2014  Tanaka Akira  <akr@fsij.org>
+
+	* test/lib/minitest/unit.rb: Use Tempfile#close! instead of
+	  Tempfile#unlink to close file descriptors.
+
+	* test/openssl/test_config.rb: Ditto.
+
+	* test/ruby/test_io.rb: Ditto.
+
 Wed May 28 00:06:18 2014  Tanaka Akira  <akr@fsij.org>
 
 	* lib/net/ftp.rb (transfercmd): Close TCP server socket even if an
@@ -5,7 +14,7 @@ Wed May 28 00:06:18 2014  Tanaka Akira  <akr@fsij.org>
 
 Tue May 27 23:50:07 2014  Tanaka Akira  <akr@fsij.org>
 
-	* lib/cgi/core.rb: Use Tempfile#close(true) instead of Tempfile#unlink
+	* lib/cgi/core.rb: Use Tempfile#close! instead of Tempfile#unlink
 	  to close file descriptors.
 
 Tue May 27 23:06:46 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
